ngsfragments/io/parse_sam/read_intervals.h

static inline uint32_t build_reject_mask(int qcfail)
{
    uint32_t mask = BASE_REJECT_MASK;
    if (!qcfail) mask |= BAM_FQCFAIL;  /* exclude QC-fails unless caller wants them */
    return mask;
}
//=====================================================================================
// Define structs and functions
//-------------------------------------------------------------------------------------

typedef struct {
    samFile *fp;
    bam_hdr_t *header;
    hts_itr_t *iter;
    bam1_t *aln;
    int min_size;
    int max_size;
    int paired;
    uint32_t reject_mask;  /* precomputed from qcfail at init time — avoids per-read recompute */
    int mapq_cutoff;
    float proportion;
} read_iter_t;
typedef struct {
    char *name;
    int start;
    int end;
    int length;
    long *pos;
    int8_t *methyl;
    uint8_t *qual;
    int ncpgs;
    int size;
    int max_size;
    int strand;
    bam1_t *read;
    bam_hdr_t *header;
} methyl_read_t;
typedef struct {
    read_iter_t *read_iter;
    void *methyl_hash;
    TwoBit   *tb;          /* non-NULL when using a .2bit reference  */
    faidx_t  *fai;         /* non-NULL when using a FASTA reference  */
    char *chrom;
    int ref_start;
    int ref_end;
    char *ref_seq;
    int seq_len;
    int chrom_length;
    int use_xm;            /* 1 = use XM-tag path (no ref); 0 = reference-based path */
    methyl_read_t *methyl_pair;
    methyl_read_t *read1;
    methyl_read_t *read2;
} methyl_read_iterator_t;
typedef struct {
    long *pos;
    int *strand;
    int size;
    int max_size;
} reference_cpgs_t;
//==================================================================================================
// read_intervals.c
//--------------------------------------------------------------------------------------------------

/* check_read is static inline so both read_intervals.c and read_iterator.c get an inlined copy
 * with no function-call overhead on the hot per-read path.
 *
 * reject_mask: precomputed with build_reject_mask(qcfail) once per file/iterator.
 *   Combines BAM_FUNMAP | BAM_FDUP | BAM_FSECONDARY | BAM_FSUPPLEMENTARY and optionally
 *   BAM_FQCFAIL into a single bitwise test — one branch instead of four.
 */
static inline int check_read(bam1_t *aln,
                              uint32_t reject_mask,
                              int min_size,
                              int max_size,
                              int paired,
                              int mapq_cutoff,
                              float proportion)
{
    if (aln->core.qual < mapq_cutoff)
        return 0;

    /* Single combined flag test — branch-predictor-friendly on clean BAMs */
    if (aln->core.flag & reject_mask)
        return 0;

    int tlen;
    if (paired == 1)
    {
        if (!(aln->core.flag & BAM_FPROPER_PAIR))
            return 0;
        if (aln->core.flag & BAM_FMUNMAP)
            return 0;
        /* Fragment length is |isize| regardless of which mate this is.
         * NOTE: do NOT filter to BAM_FREAD1 here. check_read is shared with the
         * name-paired methyl iterator (read_iter_next), which must see BOTH mates
         * to form a pair. Per-fragment de-duplication (one interval per pair) is
         * the interval builder's job and is done there via the isize>0 test. */
        tlen = (int)llabs(aln->core.isize);
    }
    else
    {
        tlen = aln->core.l_qseq;
    }

    if (tlen < min_size || tlen > max_size)
        return 0;

    /* Downsample: fast_rand_float() uses thread-local xorshift32, no global lock */
    if (proportion < 1.0f && fast_rand_float() >= proportion)
        return 0;

    return 1;
}
// Add reads from sam file to interval list (whole-file sequential scan)
void sam_iter_add(char *samfile_name, labeled_aiarray_t *intervals,
                  int min_size, int max_size, int paired, int qcfail, int mapq_cutoff,
                  float proportion, int nthreads, int add_chr);
// Add reads from one chromosome using the BAM index (parallel-friendly)
void sam_iter_add_region(char *samfile_name, labeled_aiarray_t *intervals,
                         const char *chromosome,
                         int min_size, int max_size, int paired, int qcfail, int mapq_cutoff,
                         float proportion, int nthreads, int add_chr);
// Add reads from sam file to interval list and adjust for nucleosome occupancy
void sam_nucleosome_add(char *samfile_name,
                        labeled_aiarray_t *intervals,
                        int min_size,
                        int max_size,
                        int paired,
                        int fixed_size,
                        int qcfail,
                        int mapq_cutoff,
                        float proportion,
                        int nthreads,
                        int add_chr);
// Initialize methyl_read_iterator_t struct
methyl_read_iterator_t *methyl_read_iterator_init(const char *bam_file_path,
                                                    const char *ref_file,
                                                    const char *chromosome,
                                                    int start,
                                                    int end,
                                                    int min_size,
                                                    int max_size,
                                                    int qcfail,
                                                    int mapq_cutoff,
                                                    float proportion,
                                                    int nthreads);
// Free memory allocated for methyl_read_iterator_t struct
void methyl_read_iterator_destroy(methyl_read_iterator_t *iter);
// Iterate over BAM file
int methyl_read_iterator_next(methyl_read_iterator_t *iter);
//==================================================================================================
// reference_methyl.c
//--------------------------------------------------------------------------------------------------

// Initialize reference CpGs struct
reference_cpgs_t *reference_cpgs_init();
// Free memory allocated for reference CpGs struct
void reference_cpgs_destroy(reference_cpgs_t *cpgs);
// Append CpG to reference CpGs struc
void reference_cpgs_append(reference_cpgs_t *cpgs, long pos, int strand);
// Fetch reference CpGs
reference_cpgs_t *fetch_reference_cpgs(char *ref_2bit, char *chrom);
// Split reads by length/profile and write to output BAM files
void split_methyl_bam(const char *bam_file_path,
                        const char *output_bam_file_path1,
                        const char *output_bam_file_path2,
                        char *ref_2bit,
                        const char *chromosome,
                        int min_size1,
                        int max_size1,
                        int min_size2,
                        int max_size2,
                        int min_distance,
                        int tolerance,
                        int max_iter,
                        int qcfail,
                        int mapq_cutoff,
                        float proportion,
                        int nthreads);